# folonet

./: .gitignore  Cargo.toml  README.md  folonet.proto  rust-toolchain.toml
folonet/: Cargo.toml
folonet-client/: Cargo.toml  build.rs
folonet-client/src/: folonet.rs  lib.rs  mod.rs
folonet-common/: Cargo.toml
folonet-common/src/: event.rs  lib.rs  maps.rs  queue.rs
folonet-ebpf/: Cargo.toml
folonet-ebpf/src/: main.rs
folonet-server/: .gitignore  gen.sh  go.mod  go.sum  main.go  model.go
folonet-server/folonetrpc/: folonet.pb.go  folonet_grpc.pb.go
folonet/src/: config.rs  endpoint.rs  event.rs  main.rs  message.rs  net.rs  service.rs  tcp_fsm.rs  worker.rs
folonet/src/state/: mod.rs  tcp.rs  tcp_fsm.rs  udp.rs
scripts/: port-check.py
xtask/src/: build_ebpf.rs  run.rs
yamls/: nginx.yaml
