[package]
name = "folonet-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }
network-types = "0.0.4"
byteorder = { version = "1", default-features = false }
bitflags = "2.4.1"

[lib]
path = "src/lib.rs"
