[package]
name = "folonet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
folonet-common = { path = "../folonet-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "sync"] }
rust-fsm = "0.6.1"
byteorder = "1.5.0"

[[bin]]
name = "folonet"
path = "src/main.rs"
