[package]
name = "folonet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
folonet-common = { path = "../folonet-common", features = ["user"] }
folonet-client = { path = "../folonet-client" }
anyhow = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "sync"] }
rust-fsm = "0.6.1"
byteorder = "1.5.0"
enum_dispatch = "0.3.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pnet = "0.34.0"
once_cell = "1.19.0"
mio = "0.8"

[[bin]]
name = "folonet"
path = "src/main.rs"

[profile.release]
debug = true
